# Zappy

./: .gitignore  Makefile  README.md
.github/workflows/: AI.yml  GUI.yml  Server.yml
App/AI/: .gitignore  AI.md  Makefile  README.md  client_num.csv
App/AI/src/: Core.py  file.py  main.py
App/AI/src/Bot/: Bot.py
App/AI/src/Client/: Client.py
App/AI/src/Command/: Command.py
App/AI/src/Parser/: Parsing.py
App/AI/src/Players/: Analysis.py  Inventory.py  Level.py
App/GUI/: .gitignore  CMakeLists.txt  GUI.md  README.md  build.sh
App/GUI/App/include/GUI/: constants.hpp
App/GUI/App/src/: main.cpp
App/GUI/cmake/modules/: MakeDoc.cmake  myVariables.cmake
App/GUI/include/GUI/: Argument.hpp  Constant.hpp  Egg.hpp  Gui.hpp  KeyBoard.hpp  Parser.hpp  Player.hpp  PluginLoader.hpp  Position.hpp  Protocol.hpp  RunTimeException.hpp
App/GUI/include/GUI/Abstraction/: ARenderer.hpp  IClient.hpp  IPlugin.hpp  IRenderer.hpp
App/GUI/include/GUI/Inventory/: Inventory.hpp  Resource.hpp
App/GUI/include/GUI/Map/: Map.hpp  Tile.hpp
App/GUI/lib/: CMakeLists.txt
App/GUI/lib/include/myLib/Clock/: Clock.hpp
App/GUI/lib/shared/Renderer/SFML/: CMakeLists.txt
App/GUI/lib/shared/Renderer/SFML/include/GUI/: Client.hpp  Map.hpp  Mob.hpp  Position.hpp  SFML.hpp  SFMLClient.hpp
App/GUI/lib/shared/Renderer/SFML/include/GUI/Mob/: Mob.hpp
App/GUI/lib/shared/Renderer/SFML/include/GUI/Mob/Inventory/: Resource.hpp
App/GUI/lib/shared/Renderer/SFML/src/: SFML.cpp  client.cpp  entryPoint.cpp  event.cpp
App/GUI/lib/shared/Renderer/SFML/src/Client/: client.cpp  command.cpp  commands.cpp  connection.cpp
App/GUI/lib/shared/Renderer/SFML/src/Inventory/: resource.cpp
App/GUI/lib/src/: clock.cpp  random.cpp
App/GUI/lib/static/: CMakeLists.txt
App/GUI/lib/static/myLib/include/myLib/: Random.hpp
App/GUI/lib/static/myLib/include/myLib/Clock/: Time.hpp
App/GUI/src/: gui.cpp  main.cpp  parser.cpp  pluginLoader.cpp  protocol.cpp
App/GUI/src/Inventory/: resource.cpp
App/GUI/src/Parser/: parseArgs.cpp  parseServerResponse.cpp
App/Server/: .gitignore  CMakeLists.txt  Makefile  README.md  Server.md  build.sh
App/Server/App/include/Server/: Constants.h
App/Server/App/src/: main.c
App/Server/cmake/modules/: ClangTidy.cmake  MakeDoc.cmake  myVariables.cmake
App/Server/include/Server/: Bind.h  Constant.h  Server.h  arguments.h  bind.h  client.h  cmd_ai_client.h  cmd_client.h  cmd_gui_client.h  cmd_server.h  constant.h  game.h  parser.h  server.h  tools.h
App/Server/include/Server/Game/: action.h  clock.h  egg.h  game.h  map.h  player.h  position.h  resource.h  tile.h  update.h
App/Server/src/: bind.c  client_tools.c  main.c  parser.c  server.c  tools.c
App/Server/src/bind/: bind.c  bind_team.c
App/Server/src/game/: clock.c  egg.c  game.c  map.c  player.c  resource.c  update.c
App/Server/src/input/: ai_cmd.c  client.c  cmd_client.c  cmd_server.c  gui_cmd.c  server.c
App/Server/src/input/client/: client.c  connect.c
App/Server/src/input/client/AI/: ai.c  cmd_broadcast.c  cmd_connection_nbr.c  cmd_eject.c  cmd_fork.c  cmd_forward.c  cmd_incantation.c  cmd_inventory.c  cmd_left.c  cmd_look.c  cmd_right.c  cmd_set.c  cmd_take.c  rotate_player.c
App/Server/src/input/client/GUI/: cmd_frequence.c  cmd_frequency.c  cmd_frequency_update.c  cmd_map_size.c  cmd_map_tile_content.c  cmd_player_inventory.c  cmd_player_lvl.c  cmd_player_pos.c  cmd_team_names.c  cmd_tile_content.c  gui.c
App/Server/src/input/cmd_ai_client/: cmd_broadcast.c  cmd_inventory.c
App/Server/src/input/cmd_client/: cmd_frequence.c  cmd_frequence_update.c  cmd_map_size.c  cmd_map_tile_content.c  cmd_player_inventory.c  cmd_player_lvl.c  cmd_player_pos.c  cmd_team_names.c  cmd_tile_content.c
App/Server/src/input/cmd_gui_client/: cmd_frequence.c  cmd_frequence_update.c  cmd_map_size.c  cmd_map_tile_content.c  cmd_player_inventory.c  cmd_player_lvl.c  cmd_player_pos.c  cmd_tile_content.c
doc/ref/: README.md
